some more tweaks

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 				u.more_awesome_things ++;</br>
 			    <span class="comments">// and everything you wish can be achieved.</span><br />
 				}.start()</br>
-				<span class="comments">// The last thing I want say, boring and ordinary, is:</span><br />
-				System.out.println(<span class="string">"Happy Birthday !!!"</span>);
+				<span class="comments">// The last thing I want say, I will be there for you , and:</span><br />
+				System.out.println(<span class="string">"Happyyyyyyyyyy Birthdayyyyyyyyyyyyyyyyy !!!"</span>);
 			</div>
 			<div id="loveHeart">
 				<canvas id="garden"></canvas>
